--- a/jobs.html
+++ b/jobs.html
@@ -89,10 +89,10 @@
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
-                                    <input type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding" style="width:100%;" />
+                                    <input id="post" type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding" style="width:100%;" />
                                 </div>
                                 <div class="w3-padding-8">
-                                    <button type="button" class="w3-button w3-theme-d2">
+                                    <button type="button" onclick="check_post();" class="w3-button w3-theme-d2">
                                         <i class="fa fa-pencil"></i> Post</button>
                                 </div>
                             </div>
@@ -172,6 +172,15 @@
                 x.className += " w3-show";
             } else {
                 x.className = x.className.replace(" w3-show", "");
+            }
+        }
+
+        function check_post() {
+            if (document.getElementById('post').value == "") {
+                ;
+            }
+            else {
+                ;
             }
         }
     </script>
