--- a/jobs.html
+++ b/jobs.html
@@ -86,7 +86,7 @@
             <div class="w3-col">
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
+                        <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
                                     <input id="post" type="text" placeholder="Post your own Job Offer" class="w3-border w3-padding" style="width:100%;" />
@@ -100,7 +100,7 @@
                     </div>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
                     <p>Submitted by Profile #1 </p>
@@ -121,7 +121,7 @@
                         <i class="fa fa-send"></i> Apply</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
                     <p>Submitted by Profile #2 </p>
@@ -134,7 +134,7 @@
                         <i class="fa fa-send"></i> Apply</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
                     <p>Submitted by Profile #3 </p>
