--- a/messages.html
+++ b/messages.html
@@ -84,7 +84,7 @@
 
             <!-- Middle Column -->
             <div class="w3-col m2">
-                <div class="w3-container w3-card w3-white w3-round w3-margin" style="max-height: 720px; overflow-y: scroll">
+                <div class="w3-container w3-card w3-white w3-margin" style="max-height: 720px; overflow-y: scroll">
                     <br>
                     <img src="images/avatar2.png" alt="Avatar" style="width:100%" class="w3-circle">
                     <h6>Profile #1</h6>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="w3-col m10">
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <div style="height: 720px; overflow-y: scroll">
                         <br>
                         <ul class="w3-ul">
