--- a/network_search.html
+++ b/network_search.html
@@ -86,7 +86,7 @@
             <div class="w3-col">
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
+                        <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
                                     <table style="width:100%">
@@ -104,11 +104,11 @@
                     </div>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <h4 class="w3-opacity">Search Results: Found 4</h4>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
@@ -126,7 +126,7 @@
                         </td>
                     </table>
                 </div>
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
@@ -144,7 +144,7 @@
                         </td>
                     </table>
                 </div>
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
@@ -162,7 +162,7 @@
                         </td>
                     </table>
                 </div>
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
