--- a/notifications.html
+++ b/notifications.html
@@ -86,7 +86,7 @@
             <table style="width: 100%">
                 <tr style="width: 100%">
                     <td style="width: 50%;">
-                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                        <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
                                     <h4 class="w3-center">Profile #1 wants to connect</h4>
@@ -104,7 +104,8 @@
                                         <p class="w3-center">
                                             <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                         <p class="w3-center">
-                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April
+                                            1, 1988</p>
                                     </td>
                                     <td class="w3-opacity-min">
                                         <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
@@ -117,7 +118,7 @@
                         </div>
                     </td>
                     <td style="width: 50%;">
-                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                        <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
                                     <h4 class="w3-center">Profile #2 wants to connect</h4>
@@ -135,7 +136,8 @@
                                         <p class="w3-center">
                                             <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                         <p class="w3-center">
-                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April
+                                            1, 1988</p>
                                     </td>
                                     <td class="w3-opacity-min">
                                         <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
@@ -150,7 +152,7 @@
                 </tr>
                 <tr style="width: 100%">
                     <td style="width: 50%;">
-                        <div class="w3-container w3-card w3-white w3-round w3-margin">
+                        <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
                                     <h4 class="w3-center">Profile #3 wants to connect</h4>
@@ -167,7 +169,8 @@
                                         <p class="w3-center">
                                             <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                                         <p class="w3-center">
-                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                                            <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April
+                                            1, 1988</p>
                                     </td>
                                     <td class="w3-opacity-min">
                                         <button type="button" class="w3-button w3-green  w3-margin-bottom" style="width: 100%">
@@ -182,7 +185,7 @@
                 </tr>
             </table>
 
-            <div class="w3-container w3-card w3-white w3-round w3-margin">
+            <div class="w3-container w3-card w3-white w3-margin">
                 <br>
                 <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                 <h4>Jane Doe has liked the following article:</h4>
