--- a/profile_edit.html
+++ b/profile_edit.html
@@ -85,7 +85,7 @@
             <!-- Middle Column -->
             <div class="w3-col m4">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
                     <h4>Jane Doe</h4>
@@ -111,7 +111,7 @@
 
             <div class="w3-col m8">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <h4>Work Experience</h4>
                     <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Title" class="w3-border w3-padding" style="width:100%;" />
