--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
 
             <!-- Middle Column -->
             <div class="w3-col m4">
-                <div class="w3-card w3-round w3-white">
+                <div class="w3-card w3-white">
                     <div class="w3-container w3-padding">
                         <table style="width:100%">
                             <tr>
@@ -158,7 +158,7 @@
                 document.getElementById('phone').value == "" ||
                 document.getElementById('password').value == "" ||
                 document.getElementById('c_password').value == "") {
-                document.getElementById('error_message').value = "Empty fields.";
+                document.getElementById('error_message').value = "Missing required fields.";
             }
             else {
                 document.getElementById('error_message').value = "";
