--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
             <div class="w3-col">
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
+                        <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
                                     <input id="post" type="text" placeholder="Status: Feeling great!" class="w3-border w3-padding" style="width:100%;" />
@@ -100,7 +100,7 @@
                     </div>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <h4>John Doe</h4>
@@ -124,7 +124,7 @@
                         <i class="fa fa-comment"></i> Comment</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <h4>Jane Doe</h4>
@@ -140,7 +140,7 @@
                         <i class="fa fa-comment"></i> Comment</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <h4>Angie Jane</h4>
