--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Left Column -->
       <div class="w3-col m3">
         <!-- Profile -->
-        <div class="w3-card w3-round w3-white">
+        <div class="w3-card w3-white">
           <div class="w3-container">
             <h4 class="w3-center">My Profile</h4>
             <p class="w3-center">
@@ -102,7 +102,7 @@
         <br>
 
         <!-- Interests -->
-        <div class="w3-card w3-round w3-white w3-hide-small">
+        <div class="w3-card w3-white w3-hide-small">
           <div class="w3-container">
             <p>Interests</p>
             <p>
@@ -127,7 +127,7 @@
       <div class="w3-col m7">
         <div class="w3-row-padding">
           <div class="w3-col m12">
-            <div class="w3-card w3-round w3-white">
+            <div class="w3-card w3-white">
               <div class="w3-container w3-padding">
                 <h6 class="w3-opacity">Social Media template by w3.css</h6>
                 <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
@@ -138,7 +138,7 @@
           </div>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-margin">
+        <div class="w3-container w3-card w3-white w3-margin">
           <br>
           <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">1 min</span>
@@ -163,7 +163,7 @@
             <i class="fa fa-comment"></i> Comment</button>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-margin">
+        <div class="w3-container w3-card w3-white w3-margin">
           <br>
           <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">16 min</span>
@@ -180,7 +180,7 @@
             <i class="fa fa-comment"></i> Comment</button>
         </div>
 
-        <div class="w3-container w3-card w3-white w3-round w3-margin">
+        <div class="w3-container w3-card w3-white w3-margin">
           <br>
           <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">32 min</span>
