--- a/network.html
+++ b/network.html
@@ -86,7 +86,7 @@
             <div class="w3-col">
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
-                        <div class="w3-card w3-round w3-white">
+                        <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
                                     <table style="width:100%">
@@ -107,7 +107,7 @@
                 <table style="width: 100%">
                     <tr style="width: 100%">
                         <td style="width: 33.3%;">
-                            <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <img src="images/avatar2.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
                                 </p>
@@ -122,7 +122,7 @@
                             </div>
                         </td>
                         <td style="width: 33.3%;">
-                            <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
                                 </p>
@@ -137,7 +137,7 @@
                             </div>
                         </td>
                         <td style="width: 33.3%;">
-                            <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <img src="images/avatar5.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
                                 </p>
@@ -154,7 +154,7 @@
                     </tr>
                     <tr style="width: 100%">
                         <td style="width: 33.3%;">
-                            <div class="w3-container w3-card w3-white w3-round w3-margin">
+                            <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
                                     <img src="images/avatar6.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
                                 </p>
