--- a/profile_template.html
+++ b/profile_template.html
@@ -85,7 +85,7 @@
             <!-- Middle Column -->
             <div class="w3-col m4">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
                     <h4>Jane Doe</h4>
@@ -106,7 +106,7 @@
 
             <div class="w3-col m8">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <h4>Jane Doe</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
