--- a/user_profile.html
+++ b/user_profile.html
@@ -85,7 +85,7 @@
             <!-- Middle Column -->
             <div class="w3-col m4">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
                     <table style="width:100%">
@@ -117,24 +117,24 @@
 
             <div class="w3-col m8">
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin">
+                <div class="w3-container w3-card w3-white w3-margin">
                     <h4>Work Experience</h4>
                     <ul style="padding-left: 16px">
                         <li>Company #1
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li>Company #2
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li>Company #3
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
@@ -143,14 +143,14 @@
                     <h4>Education</h4>
                     <ul style="padding-left: 16px">
                         <li>University
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li>School
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
