--- a/profile_edit.html
+++ b/profile_edit.html
@@ -112,7 +112,17 @@
             <div class="w3-col m8">
 
                 <div class="w3-container w3-card w3-white w3-margin">
-                    <h4>Work Experience</h4>
+                    <table style="width:100%;">
+                        <td>
+                            <h4>Work Experience</h4>
+                        </td>
+                        <td>
+                            <form style="float:right;">
+                                <input type="radio" name="visibility" value="Public" checked/> Public
+                                <input type="radio" name="visibility" value="Private"> Private
+                            </form>
+                        </td>
+                    </table>
                     <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Title" class="w3-border w3-padding" style="width:100%;" />
                     </div>
@@ -126,7 +136,17 @@
                             <i class="fa fa-plus"></i> Add Entry</button>
                     </div>
                     <hr class="w3-clear">
-                    <h4>Education</h4>
+                    <table style="width:100%;">
+                        <td>
+                            <h4>Education</h4>
+                        </td>
+                        <td>
+                            <form style="float:right;">
+                                <input type="radio" name="visibility" value="Public" checked> Public
+                                <input type="radio" name="visibility" value="Private"> Private
+                            </form>
+                        </td>
+                    </table>
                     <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Title" class="w3-border w3-padding" style="width:100%;" />
                     </div>
@@ -140,7 +160,17 @@
                             <i class="fa fa-plus"></i> Add Entry</button>
                     </div>
                     <hr class="w3-clear">
-                    <h4>Skills</h4>
+                    <table style="width:100%;">
+                        <td>
+                            <h4>Skills</h4>
+                        </td>
+                        <td>
+                            <form style="float:right;">
+                                <input type="radio" name="visibility" value="Public" checked> Public
+                                <input type="radio" name="visibility" value="Private"> Private
+                            </form>
+                        </td>
+                    </table>
                     <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Interests. Use a comma (,) to separate your different skills." class="w3-border w3-padding"
                             style="width:100%;" />
