--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Notifications</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Settings</a>
+    <a href="login.html" class="w3-bar-item w3-button w3-padding-large">Log Out</a>
   </div>
 
   <!-- Page Container -->
